<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main"
    android:gravity="top|center_horizontal"
    android:orientation="vertical"
    android:layoutDirection="rtl"
    tools:context=".Signup">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="38sp"
        android:textStyle="bold"
        android:layout_margin="30dp"
        android:textColor="@color/white"
        android:text="@string/create_account"
        android:textAlignment="viewStart"
        android:fontFamily="@font/vazir" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background"
        android:padding="20dp"
        android:gravity="top|center_horizontal"
        android:orientation="vertical">

        <EditText
            android:id="@+id/first_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:padding="10dp"
            android:background="@drawable/grey_edittext"
            android:textColor="@color/black"
            android:textColorHint="@color/main_variant"
            android:inputType="text"
            android:imeOptions="actionNext"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="100dp"
            android:hint="@string/first_name"
            android:textAlignment="viewStart"
            android:gravity="right|center_vertical"
            android:layoutDirection="rtl"
            android:fontFamily="@font/vazir"
            tools:ignore="RtlCompat,RtlHardcoded" />

        <EditText
            android:id="@+id/last_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:padding="10dp"
            android:background="@drawable/grey_edittext"
            android:textColor="@color/black"
            android:textColorHint="@color/main_variant"
            android:inputType="text"
            android:imeOptions="actionNext"
            android:layout_marginBottom="15dp"
            android:hint="@string/last_name"
            android:textAlignment="viewStart"
            android:gravity="right|center_vertical"
            android:layoutDirection="rtl"
            android:fontFamily="@font/vazir"
            tools:ignore="RtlCompat,RtlHardcoded" />

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:padding="10dp"
            android:background="@drawable/grey_edittext"
            android:textColor="@color/black"
            android:textColorHint="@color/main_variant"
            android:inputType="textEmailAddress"
            android:imeOptions="actionNext"
            android:layout_marginBottom="15dp"
            android:hint="@string/email"
            android:textAlignment="viewStart"
            android:fontFamily="@font/vazir" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:padding="10dp"
            android:background="@drawable/grey_edittext"
            android:textColor="@color/black"
            android:textColorHint="@color/main_variant"            android:inputType="textPassword"
            android:imeOptions="actionNext"
            android:layout_marginBottom="15dp"
            android:hint="@string/password"
            android:textAlignment="viewStart"
            android:gravity="right|center_vertical"
            android:fontFamily="@font/vazir"
            tools:ignore="RtlCompat,RtlHardcoded" />

        <EditText
            android:id="@+id/confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:padding="10dp"
            android:background="@drawable/grey_edittext"
            android:textColor="@color/black"
            android:textColorHint="@color/main_variant"
            android:inputType="textPassword"
            android:imeOptions="actionDone"
            android:layout_marginBottom="15dp"
            android:hint="@string/confirm_password"
            android:textAlignment="viewStart"
            android:gravity="right|center_vertical"
            android:fontFamily="@font/vazir"
            tools:ignore="RtlCompat,RtlHardcoded" />

        <Button
            android:id="@+id/signup"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:padding="10dp"
            android:background="@drawable/button_background"
            android:textColor="@color/white"
            android:layout_marginBottom="10dp"
            android:textAllCaps="false"
            android:text="@string/signup"
            android:textStyle="bold"
            android:fontFamily="@font/vazir" />

        <TextView
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="20sp"
            android:padding="10dp"
            android:textColor="@color/main"
            android:text="@string/already_have_account"
            android:textStyle="bold"
            android:fontFamily="@font/vazir" />

    </LinearLayout>
</LinearLayout>

</ScrollView>
